--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Responsive Web Design</title>
+    <title>Professional Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
@@ -9,11 +9,8 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Welcome to the store!</h1>
-      <p>
-        When you change the screen size, the layout will change so you can view
-        the page comfortably no matter how small the screen gets!
-      </p>
+      <h1>Terrence McCarthy</h1>
+      
     </header>
 
     <!-- Navbar -->
