--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
     <!-- Navbar -->
     <nav>
-      <a href="#">Camera</a>
-      <a href="#">Tablet</a>
-      <a href="#">Toilet Paper</a>
-      <a href="#">Wooden Spoons</a>
+      <a href="#about">About Me</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact Me</a>
     </nav>
 
     <!-- Body -->
