--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Body -->
     <main>
       <!-- Sidebar -->
-      <aside>
+      <aside id="about">
         <h2>When you change the screen size...</h2>
         <p>The navbar and this sidebar will be stacked on top of each other!</p>
         <p>
@@ -31,7 +31,7 @@
         </p>
       </aside>
       <!-- Product Cards -->
-      <div class="products">
+      <div class="products" id="projects">
         <section class="card">
           <header>Camera</header>
           <img src="./assets/images/camera.jpg" alt="black camera" />
@@ -62,7 +62,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer id="contact">
       <h3>
         Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
         window!
