added photo of my self and following text to it

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     <main>
       <!-- Sidebar -->
       <aside id="about">
-        <h2>When you change the screen size...</h2>
-        <p>The navbar and this sidebar will be stacked on top of each other!</p>
+        <img height ="200px" src="./assets/images/IMG-0513.JPG" alt="Picture of me">
+        
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis odit error atque enim accusantium ea non quos perspiciatis! Deleniti aperiam saepe aut at, molestias atque. Obcaecati tenetur officia nesciunt.</p>
         <p>
-          And the product cards will wrap around as the screen gets smaller.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum culpa error sed molestiae odio, cupiditate, corrupti iusto consequatur atque velit et eligendi ex voluptate. Modi laborum placeat harum? Quibusdam, veniam.
         </p>
       </aside>
       <!-- Product Cards -->
