added screenshots of projects and hyper links for the pictures

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <!-- Product Cards -->
       <div class="products" id="projects">
         <section class="card">
-          <header>Camera</header>
-          <img src="./assets/images/camera.jpg" alt="black camera" />
-          <p>Price: $300</p>
+          <header>Horiseon Marketing</header>
+          <a target="_blank" href="https://tmysterz.github.io/Refactoring-Horiseon/"><img src="./assets/images/tmysterz.github.io_Refactoring-Horiseon_.png" alt="screen shot of horiseon marketing" /></a>
+          <p><a target="_blank" href="https://github.com/Tmysterz/Refactoring-Horiseon">code</a></p>
         </section>
         <section class="card">
           <header>Tablet</header>
