--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <p><a target="_blank" href="https://github.com/Tmysterz/Refactoring-Horiseon">code</a></p>
         </section>
         <section class="card">
-          <header>Tablet</header>
-          <img src="./assets/images/tablet.jpg" alt="tablet held in hands" />
-          <p>Price: $150</p>
+          <header>Study Guide</header>
+          <a target="_blank" href="https://tmysterz.github.io/prework-study-guide/"><img src="./assets/images/firstApplication.PNG" alt="screenshot of the study guide i created" /></a>
+          <p><a target="_blank" href="https://github.com/Tmysterz/prework-study-guide">code</a></p>
         </section>
         <section class="card">
           <header>Toilet Paper</header>
