added a coming soon project

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <p>Price: $30</p>
         </section>
         <section class="card">
-          <header>Wooden Spoons</header>
+          <header>project 4</header>
           <img
-            src="./assets/images/wooden-spoons.jpg"
-            alt="4 wooden spoons with different seasonings"
+            src="./assets/images/comingSoon.avif"
+            alt="coming soon image"
           />
-          <p>Price: $10</p>
+          
         </section>
       </div>
     </main>
