finishing the last of the project section

--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
 
     <!-- Footer -->
     <footer id="contact">
-      <h3>
-        Open Chrome DevTools --> Toggle device toolbar --> Resize the browser
-        window!
-      </h3>
+      <h3>Contact Me: </h3>
+      <a href=""><img height="50px" target="_blank" src="./assets/images/linkedInImage.png" alt="linkedin Image"></a>
     </footer>
   </body>
 </html>
