webpage completed. next is read me

--- a/index.html
+++ b/index.html
@@ -24,32 +24,35 @@
     <main>
       <!-- Sidebar -->
       <aside id="about">
-        <img height ="200px" src="./assets/images/IMG-0513.JPG" alt="Picture of me">
+        <h2>About Me</h2>
+        <img height ="600px" src="./assets/images/IMG-0513.JPG" alt="Picture of me">
         
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reiciendis odit error atque enim accusantium ea non quos perspiciatis! Deleniti aperiam saepe aut at, molestias atque. Obcaecati tenetur officia nesciunt.</p>
+        <p>My name is Terrence McCarthy and I am 23 years old living in Benbrook, Texas. I am currently a student attending the 2023 SMU coding bootcamp. Before this coding bootcamp I had taken a couple classes of C and C++ as a sophmore at Tarrant county college.</p>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum culpa error sed molestiae odio, cupiditate, corrupti iusto consequatur atque velit et eligendi ex voluptate. Modi laborum placeat harum? Quibusdam, veniam.
+          My love to code came from loving computers and the impact they had on the world since I was a kid.
         </p>
       </aside>
       <!-- Product Cards -->
       <div class="products" id="projects">
+        <h2>Projects</h2>
         <section class="card">
           <header>Horiseon Marketing</header>
           <a target="_blank" href="https://tmysterz.github.io/Refactoring-Horiseon/"><img src="./assets/images/tmysterz.github.io_Refactoring-Horiseon_.png" alt="screen shot of horiseon marketing" /></a>
-          <p><a target="_blank" href="https://github.com/Tmysterz/Refactoring-Horiseon">code</a></p>
+          <p><a target="_blank" href="https://github.com/Tmysterz/Refactoring-Horiseon">Git Hub</a></p>
         </section>
         <section class="card">
           <header>Study Guide</header>
-          <a target="_blank" href="https://tmysterz.github.io/prework-study-guide/"><img src="./assets/images/firstApplication.PNG" alt="screenshot of the study guide i created" /></a>
-          <p><a target="_blank" href="https://github.com/Tmysterz/prework-study-guide">code</a></p>
+          <a target="_blank" href="https://tmysterz.github.io/prework-study-guide/"><img height="400px" src="./assets/images/firstApplication.PNG" alt="screenshot of the study guide i created" /></a>
+          <p><a target="_blank" href="https://github.com/Tmysterz/prework-study-guide">Git Hub</a></p>
         </section>
         <section class="card">
-          <header>Toilet Paper</header>
-          <img
-            src="./assets/images/toilet-paper.jpg"
+          <header>Porject 3</header>
+          <img 
+            height="400px"
+            src="./assets/images/comingSoon.avif"
             alt="rolls of toilet paper in a basket"
           />
-          <p>Price: $30</p>
+          
         </section>
         <section class="card">
           <header>project 4</header>
@@ -65,7 +68,18 @@
     <!-- Footer -->
     <footer id="contact">
       <h3>Contact Me: </h3>
-      <a href=""><img height="50px" target="_blank" src="./assets/images/linkedInImage.png" alt="linkedin Image"></a>
+      <img height="50px" target="_blank" src="./assets/images/phone.png" alt="phone image">
+      <div class="footerStyle">
+        682-429-3347
+      </div>
+      <img height="50px" target="_blank" src="./assets/images/gmail-icon-free-png.webp" alt="phone image">
+      <div class="footerStyle">
+        terrencemccarthysnkrs@gmail.com
+      </div>
+      <img height="50px" target="_blank" src="./assets/images/github-logo-black-transparent-free-png.webp" alt="git hub logo">
+      <div class="footerStyle">
+          https://github.com/Tmysterz
+      </div>
     </footer>
   </body>
 </html>
