Edited some alt attributes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img 
             height="400px"
             src="./assets/images/comingSoon.avif"
-            alt="rolls of toilet paper in a basket"
+            alt="coming soon image"
           />
           
         </section>
@@ -72,7 +72,7 @@
       <div class="footerStyle">
         682-429-3347
       </div>
-      <img height="50px" target="_blank" src="./assets/images/gmail-icon-free-png.webp" alt="phone image">
+      <img height="50px" target="_blank" src="./assets/images/gmail-icon-free-png.webp" alt="gnail logo">
       <div class="footerStyle">
         terrencemccarthysnkrs@gmail.com
       </div>
